--- a/src/style/Catalog.module.scss
+++ b/src/style/Catalog.module.scss
@@ -41,6 +41,7 @@
       margin-top: 20px;
       h1 {
         font-family: serif;
+        cursor: pointer;
         font-size: 25px;
         margin-left: 150px;
       }
@@ -63,11 +64,51 @@
       .cardimg {
         display: flex;
         justify-content: center;
+        flex-direction: column;
         align-items: center;
         width: 300px;
-        height: 500px;
-        background-color: aqua;
+        height: 600px;
+        background-color: #f6f3e2;
         margin: 100px;
+        .item {
+          position: relative;
+          width: 300px;
+          height: 400px;
+          top: -55px;
+        }
+        .like {
+          z-index: 3;
+          position: relative;
+          left: 100px;
+          cursor: pointer;
+        }
+        .textcont {
+          position: relative;
+          left: -30px;
+          width: 200px;
+          top: -30px;
+          h1 {
+            position: relative;
+            font-size: 20px;
+          }
+
+          .cost {
+            font-family: serif;
+            margin-top: 20px;
+            font-size: 20px;
+          }
+        }
+        button {
+          width: 100px;
+          height: 50px;
+          background-color: #8192a8;
+          position: relative;
+          top: -20px;
+          border-radius: 15px;
+        }
+        button:hover {
+          background-color: #a0abba;
+        }
       }
     }
   }
