--- a/src/style/main.module.scss
+++ b/src/style/main.module.scss
@@ -73,6 +73,7 @@
   .el {
     width: 900px;
     height: 900px;
+    position: relative;
   }
   .image {
     position: absolute;
@@ -333,7 +334,9 @@
       justify-content: start;
       background-color: #f6f3e2;
       margin-top: 30px;
+      border-radius: 20px;
       img {
+        border-radius: 20px 20px 0px 0px;
         width: 100%;
         height: 450px;
       }
